--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@
                                                 </div>
                                                 <div class="text-wrap">
                                                     <h5 class="heading"><a href="#">PRECONSTRUCTION SERVICES</a></h5>
-                                                    <p class="sub-heading margin-top-18">Autora Construction Services provides the right resources and expertise to evaluate concepts through our industry leading Preconstruction Services team.</p>
+                                                    <p class="sub-heading margin-top-18">HB (Hafarb) BuildWorks provides the right resources and expertise to evaluate concepts through our industry leading Preconstruction Services team.</p>
                                                 </div>
                                             </div><!-- /.themesflat-icon-box -->                                      
                                         </div><!-- /.col-md-4 -->
@@ -1020,9 +1020,9 @@
                                                                    <i class="fa fa-quote-left"></i>
                                                                 </div>
                                                                 <blockquote class="text">
-                                                                    <p>“ I have worked with Autora Construction Services for over 10 years, they have consistently delivered fair pricing, quality workmanship and complete projects on schedule. I appreciate the level of customer service they deliver by going above and beyond expectations. ”</p>
+                                                                    <p>“ I have worked with HB (Hafarb) BuildWorks for over 10 years, they have consistently delivered fair pricing, quality workmanship and complete projects on schedule. I appreciate the level of customer service they deliver by going above and beyond expectations. ”</p>
                                                                     <div class="sep has-width w80 accent-bg clearfix"></div>
-                                                                    <h6 class="name">PAUL PIGNATARO</h6>
+                                                                    <h6 class="name">Austin Lakemfa</h6>
                                                                 </blockquote>
                                                             </div>
                                                         </div>
@@ -1034,9 +1034,9 @@
                                                                    <i class="fa fa-quote-left"></i>
                                                                 </div>
                                                                 <blockquote class="text">
-                                                                    <p>“ I have worked with Autora Construction Services for over 10 years, they have consistently delivered fair pricing, quality workmanship and complete projects on schedule. I appreciate the level of customer service they deliver by going above and beyond expectations. ”</p>
+                                                                    <p>“ I have worked with HB (Hafarb) BuildWorks for over 10 years, they have consistently delivered fair pricing, quality workmanship and complete projects on schedule. I appreciate the level of customer service they deliver by going above and beyond expectations. ”</p>
                                                                     <div class="sep has-width w80 accent-bg clearfix"></div>
-                                                                    <h6 class="name">PAUL PIGNATARO</h6>
+                                                                    <h6 class="name">Biyi Adisa</h6>
                                                                 </blockquote>
                                                             </div>
                                                         </div>
@@ -1048,9 +1048,9 @@
                                                                    <i class="fa fa-quote-left"></i>
                                                                 </div>
                                                                 <blockquote class="text">
-                                                                    <p>“ I have worked with Autora Construction Services for over 10 years, they have consistently delivered fair pricing, quality workmanship and complete projects on schedule. I appreciate the level of customer service they deliver by going above and beyond expectations. ”</p>
+                                                                    <p>“ I have worked with HB (Hafarb) BuildWorks for over 10 years, they have consistently delivered fair pricing, quality workmanship and complete projects on schedule. I appreciate the level of customer service they deliver by going above and beyond expectations. ”</p>
                                                                     <div class="sep has-width w80 accent-bg clearfix"></div>
-                                                                    <h6 class="name">PAUL PIGNATARO</h6>
+                                                                    <h6 class="name">Hafeez Aro</h6>
                                                                 </blockquote>
                                                             </div>
                                                         </div>
@@ -1074,10 +1074,10 @@
                                                 <div class="quote-item">
                                                     <div class="inner">
                                                         <div class="heading-wrap">
-                                                            <h3 class="heading">START EXECUTING YOUR PROJECT</h3>
+                                                            <h3 class="heading">HB (Hafarb) BuildWorks</h3>
                                                         </div>
                                                         <div class="button-wrap has-icon icon-left">
-                                                            <a href="#" class="themesflat-button bg-white small"><span>(+613) 8376 6284 <span class="icon"><i class="autora-icon-phone-contact"></i></span></span></a>
+                                                            <a href="#" class="themesflat-button bg-white small"><span>+1 (773)901-0254 <span class="icon"><i class="autora-icon-phone-contact"></i></span></span></a>
                                                         </div>
                                                     </div>
                                                 </div>
